<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Athelite</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="new_workout">New Workout</string>
    <string name="main_next_workout">Next Workout</string>
    <string name="main_today_workout">Today\'s Workout</string>
    <string name="main_previous_workout">Last Workout</string>
    <string name="home_background_image">Home Background Image</string>
    <string name="workout_background_image">Workout Background Image</string>
    <string name="calendar_background_image">Calendar Background Image</string>
    <string name="graph_background_image">Graph Background Image</string>
    <string name="workout_tab_empty_list">Add A Template</string>
    <string name="workout_tab_empty_list_tap_plus">Tap The Plus</string>
    <string name="title_activity_view_workout">ViewWorkout</string>
    <string name="action_delete_workout">Delete Workout</string>
    <string name="title_activity_view_exercise">ViewExercise</string>
    <string name="back_to_exercises_page">Exercises</string>
    <string name="new_exercise">New Exercise</string>
    <string name="reps">reps</string>
    <string name="set">Set</string>
    <string name="action_delete_exercise">Delete Exercise</string>
    <string name="action_move_up">Move Up</string>
    <string name="action_move_down">Move Down</string>
    <string name="view_exercise_timer_colon">:</string>
    <string name="view_exercise_timer_zero">"00"</string>
    <string name="view_exercise_timer_pause">PAUSE</string>
    <string name="view_exercise_timer_start">START</string>
    <string name="view_exercise_timer_reset">RESET</string>
    <string name="view_exercise_timer_resume">RESUME</string>
    <string name="view_exercise_timer_minutes">Minutes</string>
    <string name="view_exercise_timer_seconds">Seconds</string>
    <string name="title_activity_view_day">ViewDay</string>
    <string name="add_a_workout">Add A Workout</string>
    <string name="add_a_workout_help">Tap The Plus</string>
    <string name="no_workout_selected">No Workout Selected</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help_text">Help</string>
    <string name="help_text_content">Athelite is a fully customizable workout logger designed for any athlete.
        \n\nSimply create a template in the "Templates" section by tapping the plus button.
        Templates can be added directly to the main page, or through the calendar.
        \n\nFrom there, you can customize your template by adding custom or built in exercises.
        To create an exercise, simply change the name and the new exercise will be automatically saved.
        \n\nFinally, you can customize your exercises by adding the appropriate number of sets, reps,
        and weight.
    </string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="empty_list">Empty List</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_title_my_account">My Profile</string>
    <string name="settings_title_username_name">Name</string>
    <string name="settings_summary_username_name">Name</string>
    <string name="settings_dialogue_username_name">Enter your name</string>
    <string name="settings_key_username_name">user_name</string>
    <string name="settings_title_workout">Workout</string>
    <string name="settings_title_timer">Timer Rest Time</string>
    <string name="settings_summary_timer">3:00</string>
    <string name="settings_key_timer">rest_time</string>
    <string name="settings_title_timer_alarm">Alarm</string>
    <string name="settings_summary_timer_alarm">Set what happens when timer finishes</string>
    <string name="settings_key_timer_alarm">timer_alarm</string>
    <string name="settings_title_units">Units</string>
    <string name="settings_summary_units">Select the metrics desired</string>
    <string name="settings_key_units">units</string>
    <string name="settings_title_target_sets">Target Sets</string>
    <string name="settings_summary_target_sets">3</string>
    <string name="settings_key_target_sets">target_sets</string>
    <string name="settings_title_target_reps">Target Reps</string>
    <string name="settings_summary_target_reps">3</string>
    <string name="settings_key_target_reps">target_reps</string>
    <string name="settings_title_additional">Additional</string>
    <string name="settings_title_notifications">Receive Notifications</string>
    <string name="settings_summary_notifications">Want to receive Notifications?</string>
    <string name="settings_key_notifications">receive_notifications</string>
    <string name="settings_default_value_notifications">true</string>
    <string name="settings_key_notification_time">notification_time</string>
    <string name="settings_notification_time">Notification Time</string>
    <string name="settings_default_notification_time">12:00</string>
    <string name="settings_title_feedback">Feedback</string>
    <string name="settings_summary_feedback">email</string>
    <string name="settings_key_feedback">feedback</string>
    <string name="title_activity_profile">Profile</string>
    <string-array name="unitsArray">
        <item>lbs</item>
        <item>kg</item>
    </string-array>
    <string-array name="unitsListValues">
        <item>lbs</item>
        <item>kg</item>
    </string-array>
    <string-array name="genderArray">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="genderListValues">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="soundArray">
        <item>Sound</item>
        <item>Vibrate</item>
        <item>Sound &amp; Vibrate</item>
    </string-array>
    <string-array name="soundListValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="goalsArray">
        <item>Starting Out</item>
        <item>Maintain</item>
        <item>Cut</item>
        <item>Bulk</item>
    </string-array>
    <string-array name="goalsListValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="donate_summary">Consider buying me a cup of coffee :)</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="lets_set_up">Let\'s set things up</string>
    <string name="units_setup">Units</string>
    <string name="title_activity_view_graph">ViewGraph</string>
    <string name="setup_information_disclaimer">Athelite will use this information for certain calculations. Don\'t worry, we won\'t use this information for anything else.</string>
    <string name="setup_imperial">Imperial</string>
    <string name="setup_metric">Metric</string>
    <string name="setup_select_units_string">Select the units you wish to use.</string>
    <string name="setup_height_string">Height</string>
    <string name="setup_height_units_string">in</string>
    <string name="setup_weight_string">Weight</string>
    <string name="setup_weight_text_string">lb</string>
    <string name="setup_age_units_string">years</string>
    <string name="setup_age_text_string">Age</string>
    <string name="setup_gender_text_string">Gender</string>
    <string name="setup_change_info_string">This information will only be used in this application. You can always change or update your profile in the settings.</string>
    <string name="setup_profile_string">Your Profile</string>
    <string name="setup_inch_tv">in</string>
    <string name="setup_pounds_tv">lbs</string>
    <string name="setup_cm_tv">cm</string>
    <string name="setup_kg_tv">kg</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_about">About</string>
    <string name="about_title_string">About</string>
    <string name="about_what_is_athelite_string">Athelite is a simple workout tracking android application. No ads, no added complexity, just a simple workout logger anyone can use.</string>
    <string name="about_license_string">
        Copyright [2016] [James Woo]\n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n

            http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.\n
    </string>
    <string name="about_libraries_string" tools:ignore="TypographyOther">
        Libraries used in Athelite\n\n

        prolific interactive - Material Calendar View\n
        https://github.com/prolificinteractive/material-calendarview\n\n

        Copyright (c) 2016 Prolific Interactive\n\n

        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:\n\n

        The above copyright notice and this permission notice shall be included in
        all copies or substantial portions of the Software.\n\n

        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
        THE SOFTWARE.\n\n\n\n\n\n





        Pugnotification\n
        https://github.com/halysongoncalves/Pugnotification\n\n

        Copyright 2013 Halyson L. Gonçalves, Inc.\n\n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n

           http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.\n\n\n\n\n\n





        GraphView\n
        (c) 2016 - Jonas Gehring\n
        http://www.android-graphview.org/\n
        https://github.com/jjoe64/GraphView/blob/master/license.txt\n\n

        GraphView is currently published under GPLv2 including "GPL linking exception".

    </string>
    <string name="about_license_title_string">Licenses</string>
</resources>