<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/settings_title_timer"
        android:summary="@string/settings_summary_timer"
        android:key="@string/settings_key_timer" />

    <ListPreference
        android:key="@string/settings_key_timer_alarm"
        android:title="@string/settings_title_timer_alarm"
        android:summary="@string/settings_summary_timer_alarm"
        android:defaultValue="1"
        android:entries="@array/soundArray"
        android:entryValues="@array/soundListValues" />

    <ListPreference
        android:title="@string/settings_title_units"
        android:summary="@string/settings_summary_units"
        android:key="@string/settings_key_units"
        android:defaultValue="1"
        android:entries="@array/unitsArray"
        android:entryValues="@array/unitsListValues"/>

    <EditTextPreference
        android:title="@string/settings_title_target_sets"
        android:summary="@string/settings_summary_target_sets"
        android:key="@string/settings_key_target_sets" />

    <EditTextPreference
        android:title="@string/settings_title_target_reps"
        android:summary="@string/settings_summary_target_reps"
        android:key="@string/settings_key_target_reps" />

</PreferenceScreen>
