<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Workouts"/>

    <ListPreference
        android:title="@string/settings_title_units"
        android:summary="@string/settings_summary_units"
        android:key="@string/settings_key_units"
        android:defaultValue="1"
        android:entries="@array/unitsArray"
        android:entryValues="@array/unitsListValues"/>

    <EditTextPreference
        android:title="@string/settings_title_target_sets"
        android:defaultValue="3"
        android:key="@string/settings_key_target_sets"
        android:inputType="number" />

    <EditTextPreference
        android:title="@string/settings_title_target_reps"
        android:defaultValue="0"
        android:key="@string/settings_key_target_reps"
        android:inputType="number" />
<!--
    <EditTextPreference
        android:title="@string/settings_title_timer"
        android:defaultValue="03:00"
        android:key="@string/settings_key_timer"
        android:inputType="datetime"/>

    <ListPreference
        android:key="@string/settings_key_timer_alarm"
        android:title="@string/settings_title_timer_alarm"
        android:summary="@string/settings_summary_timer_alarm"
        android:defaultValue="1"
        android:entries="@array/soundArray"
        android:entryValues="@array/soundListValues" />
-->
    <PreferenceCategory android:title="Notifications"/>

    <CheckBoxPreference
        android:title="@string/settings_title_notifications"
        android:summary="@string/settings_summary_notifications"
        android:key="@string/settings_key_notifications"
        android:defaultValue="@string/settings_default_value_notifications" />

    <com.athelite.Dialog.TimePreference
        android:key="@string/settings_key_notification_time"
        android:title="@string/settings_notification_time"
        android:defaultValue="@string/settings_default_notification_time"
        android:summary="12:00"/>

</PreferenceScreen>
